create swagger documentation
