# src/interfaces/http/controllers/UsersController.js
@@ -7,12 +7,14 @@ class UsersController extends BaseController {
   constructor() {
     super();
     const router = Router();
+
     // User
     router.get('/list', this.injector('ListUsers'), this.index);
     router.post('/signin', this.injector('CreateUser'), this.create);
     router.get('/:id', this.injector('ShowUser'), this.show);
     router.put('/:id', this.injector('UpdateUser'), this.update);
     router.delete('/:id', this.injector('DeleteUser'), this.delete);
+    // router.get('/auth-token', requestToken);
     
     //Coach
     router.get('/coach/list', this.injector('ListCoaches'), this.index);
